# ADBench

./: .gitmodules  Dockerfile
ADBench/: plot_graphs.py  plot_tarball.sh  run-all.ps1
tools/: CMakeLists.txt
tools/Accelerate/: CMakeLists.txt  GMM.hs  GMMIO.hs  Main.hs  Playground.hs  adbench-accelerate.cabal  compare.py  compile.sh  plot_ba_j.py  stack.yaml
tools/Accelerate/Playground/: M4.hs  Support.hs
tools/Accelerate/formulas/: formulas.tex
tools/Accelerate/src/: BA.hs  BAIO.hs  GMM.hs  GMMIO.hs  Main.hs  MainBA.hs  MainGMM.hs  Playground.hs  Timer.hs  Types.hs
tools/Accelerate/src/Playground/: M1.hs  M1N.hs  M2.hs  M3.hs  M4N.hs  M4a.hs  M4b.hs  Support.hs
tools/Accelerate/utils/: Timer.hs
