cabal-version:       >=1.10
name:                adbench-accelerate
version:             0.0.1.0
author:              Tom Smeding
maintainer:          tom.smeding@gmail.com
build-type:          Simple

executable adbench-accelerate-gmm
  main-is:             Main.hs
  other-modules:       GMM, GMMIO, Timer, Types
  build-depends:       base >= 4.13 && < 4.15,
                       accelerate,
                       accelerate-llvm-native,
                       filepath,
                       criterion-measurement >= 0.1.2 && < 0.2,
                       deepseq,
                       math-functions >= 0.3 && < 0.4,
                       bytestring >= 0.10.10 && < 0.12,
                       bytestring-lexing >= 0.5.0.2 && < 0.6
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded
