cabal-version:       >=1.10
name:                adbench-accelerate
version:             0.0.1.0
author:              Tom Smeding
maintainer:          tom.smeding@gmail.com
build-type:          Simple

executable adbench-accelerate-gmm
  main-is:             Main.hs
  other-modules:       GMM, GMMIO, Timer, Types, Playground,
                       Playground.M1, Playground.M2, Playground.M3, Playground.M4,
                       Playground.M4a, Playground.M4b,
                       Playground.M1N, Playground.M4N,
                       Playground.Support,
                       BAIO, BA
  build-depends:       base >= 4.13 && < 4.15,
                       accelerate,
                       accelerate-llvm-native,
                       accelerate-llvm-ptx,
                       filepath,
                       criterion >= 1.5.7 && < 1.6,
                       criterion-measurement >= 0.1.2 && < 0.2,
                       deepseq,
                       math-functions >= 0.3 && < 0.4,
                       bytestring >= 0.10.10 && < 0.12,
                       bytestring-lexing >= 0.5.0.2 && < 0.6,
                       double-conversion >= 2.0.2 && < 2.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts
